# UR10-grasp-based-on-YOLO-GRASPNET-and-Diffision-ACT

./: .gitignore  11.py  bridge_config.yaml  camera_image.py  data_logger.py  git_update  gripper-position  merge_zarr.py  position  start_ur.sh
ACT/: act_service.py  build_dataset.py  debug_data.py  ros_act_mgr.py  train
baseword/: base word.odt  网址.docx  调用系统python.odt
creat_coke/: spawn_cokes.py  spawn_cokes_old.py
diffusion/: clean_zarr.py  diffusion_service.py  grasp_service.py  ros_diffusion_mgr.py  train_diffusion.py
grasp/: grasp_service.py  ros_grasp_mgr.py  ros_grasp_mgr_uiread.py
src/my_ur_gripper_config/: CMakeLists.txt  package.xml
src/my_ur_gripper_config/urdf/: ur10_robotiq.urdf  ur10_robotiq.urdf.xacro
src/ros2_robotiq_gripper/robotiq_description/urdf/: 2f_85.ros2_control.xacro
src/ur10_gripper_moveit_config/: CMakeLists.txt  package.xml
src/ur10_gripper_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  sensors_3d.yaml  ur10_with_robotiq.srdf
src/ur10_gripper_moveit_config/launch/: moveit.launch.py
src/ur_description/urdf/: ur.urdf.xacro
src/ur_simulation_gz/: CHANGELOG.rst  package.xml
src/ur_simulation_gz/.github/workflows/: ci-format.yml
src/ur_simulation_gz/config/: my_controllers.yaml
src/ur_simulation_gz/launch/: ur_sim_control.launch.py  ur_sim_moveit.launch.py
src/ur_simulation_gz/test/: test_gz.py
